--- a/PesoIdeal/app/src/main/res/layout/activity_main.xml
+++ b/PesoIdeal/app/src/main/res/layout/activity_main.xml
@@ -105,13 +105,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:visibility="invisible"/>
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/situacao"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:visibility="invisible"/>
+        android:visibility="gone"/>
 
 </LinearLayout>
